--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,39 +1,49 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-6">
-            <div class="jumbotron">
-                <h1>Eat. Da. Burger.</h1>
-                <p>Check out our latest menu or add your own burger!</p>
-            </div>
-        </div>
-
-        <div class="col-md-6">
-            <img src="./assets/img/burger.png" alt="Burger" style="height: 300px;" />
+        <div class="col-md-12" style="text-align: center;">
+            <img src="./assets/img/burger-main.jpg" alt="Burger"/>
+            <h1>Eat. Da. Burger.</h1>
+            <br/><br/><br/>
         </div>
     </div>
 
+    <!--List of Burgers: Devoured and Not Devoured.-->
     <div class="row">
-        <div class="col-md-6">
-            <ul>
+        <div class="col-md-6 menu">
+            <h2>On the Menu</h2>
+            <hr/>
             {{#each burgers}} 
                 {{#unless this.devoured}}
-                <li>{{this.burger_name}}</li>
-                <button class="eatButton" data-id="{{this.id}}">Eat it.</button>
+                <h5>{{this.burger_name}}</h5>
+                <button type="button" class="btn eatButton" data-id="{{id}}" data-devoured="{{devoured}}">Eat it.</button>
                 {{/unless}} 
             {{/each}}
-            </ul>
+        </div>
+
+        <div class="col-md-6 devouredMenu">
+            <h2>Devoured Burgers</h2>
+            <hr/>
+            {{#each burgers}} 
+                {{#if this.devoured}}
+                <h5>{{this.burger_name}}</h5>
+                {{/if}} 
+            {{/each}}
+            <br/><br/>
         </div>
     </div>
 
+    <!--Form to add burger-->
     <div class="row">
-        <div class="col-md-6">
-            <ul>
-            {{#each burgers}} 
-                {{#if this.devoured}}
-                <li>{{this.burger_name}}</li>
-                {{/if}} 
-            {{/each}}
-            </ul>
+        <div class="col-md-12" style="text-align: center;">
+            <form>
+                <div class="form-group addBurger">
+                    <label for="addBurger"><h2>Add a Burger to the Menu</h2></label>
+                    <br/>
+                    <textarea class="addBurger" id="burger" rows="3"></textarea>
+                    <br/><br/>
+                    <button type="submit" class="btn" id="addBurger">Add</button>
+                </div>
+            </form>
         </div>
     </div>
 </div>
